2018-10-11 DB: added solution to database labs

--- a/onlinemarket.work/module/Application/view/layout/layout.phtml
+++ b/onlinemarket.work/module/Application/view/layout/layout.phtml
@@ -44,6 +44,7 @@
                     <ul class="nav navbar-nav">
 					<li><a href="<?= $this->url('home') ?>">Home</a></li>
 					<li><a href="<?= $this->url('market/post') ?>">Post</a></li>
+					<li><a href="<?= $this->url('events') ?>">Events</a></li>
 					</ul>
                     <span style="float:right;color:white;">
 						<!-- //*** AUTHENTICATION LAB: if auth service has an identity, display it, otherwise "guest" -->
