--- a/onlinemarket.work/module/Events/view/events/signup/thanks.phtml
+++ b/onlinemarket.work/module/Events/view/events/signup/thanks.phtml
@@ -4,7 +4,7 @@
             <h3 class="panel-title">Event Signup</h3>
         </div>
         <div class="panel-body">
-            Thank You for Signing Up!
+            <?= $this->message; ?>
         </div>
     </div>
 </div>
