2018-10-18 DB: added source for Delegators Lab + added example of listener aggregate in Application module

--- a/onlinemarket.work/module/Application/view/layout/layout.phtml
+++ b/onlinemarket.work/module/Application/view/layout/layout.phtml
@@ -45,6 +45,7 @@
 					<li><a href="<?= $this->url('home') ?>">Home</a></li>
 					<li><a href="<?= $this->url('market/post') ?>">Post</a></li>
 					<li><a href="<?= $this->url('events') ?>">Events</a></li>
+					<li><a href="<?= $this->url('registration') ?>">Registration</a></li>
 					</ul>
                     <span style="float:right;color:white;">
 						<!-- //*** AUTHENTICATION LAB: if auth service has an identity, display it, otherwise "guest" -->
