--- a/onlinemarket.work/module/SecurePost/view/registration/reg/index.phtml
+++ b/onlinemarket.work/module/SecurePost/view/registration/reg/index.phtml
@@ -18,6 +18,8 @@
                 <dd><?= $this->formText($this->regForm->get('securityQuestion')); ?><?= $this->formElementErrors($this->regForm->get('securityQuestion')); ?></dd>
                 <dt><?= $this->formLabel($this->regForm->get('securityAnswer')); ?></dt>
                 <dd><?= $this->formText($this->regForm->get('securityAnswer')); ?><?= $this->formElementErrors($this->regForm->get('securityAnswer')); ?></dd>
+                <dt><?= $this->formLabel($this->regForm->get('role')); ?></dt>
+                <dd><?= $this->formRadio($this->regForm->get('role')); ?><?= $this->formElementErrors($this->regForm->get('role')); ?></dd>
                 <p><span class="btn btn-success"><?= $this->formSubmit($this->regForm->get('submit')); ?></span></p>
                 <?= $this->formHidden($this->regForm->get('hash')); ?>
                 <?= $this->form()->closeTag(); ?>
