2018-10-25 DB: back-filled solution to file upload lab: not tested yet!

--- a/onlinemarket.work/module/Market/view/market/post/index.phtml
+++ b/onlinemarket.work/module/Market/view/market/post/index.phtml
@@ -56,7 +56,7 @@ label {
 <!-- //*** FILE UPLOAD LAB: convert to the view helper for file uploads -->
 <td width="50%" style="vertical-align:top;">
 <dt><?= $this->formLabel($post->get('photo_filename')); ?></dt>
-<dd><?= $this->formText($post->get('photo_filename')); ?><?= $this->formElementErrors($post->get('photo_filename')); ?></dd>
+<dd><?= $this->formFile($post->get('photo_filename')); ?><?= $this->formElementErrors($post->get('photo_filename')); ?></dd>
 </td>
 <td width="50%" style="vertical-align:top;">
 <dt><?= $this->formLabel($post->get('price')); ?></dt>
